# GameEngineSDK

./: CMakeLists.txt  README.md
src/: GameAPI.cpp  GameAPI.h  GameObject.cpp  GameObject.h
tests/: test_game_object.cpp
